--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
   "type": "library",
   "require": {
     "league/flysystem": "^1.0",
-    "echo511/tree-traversal": "^0.1.0"
+    "echo511/tree-traversal": "^0.1.0",
+    "codeception/mockery-module": "^0.2.2"
   },
   "require-dev": {
     "codeception/codeception": "^2.2"
